# Sodium

./: README.md  package.json
.github/workflows/: release.yml
sodium-launcher/: package-lock.json  package.json
sodium-launcher/.github/workflows/: release.yml
sodium-launcher/src/: app.html
sodium-launcher/src-tauri/: Cargo.toml  tauri.conf.json
sodium-launcher/src-tauri/capabilities/: default.json
sodium-launcher/src-tauri/icons/: icon.icns
sodium-launcher/src-tauri/launcher/: launcher.js
sodium-launcher/src-tauri/src/: lib.rs  main.rs
sodium-launcher/src/libs/: MicrosoftOauth2.ts
sodium-launcher/src/routes/: +page.svelte
sodium-launcher/static/: smui-dark.css
