[package]
name = "SodiumMC"
version = "0.1.0"
description = "Minecraft Launcher"
authors = ["EzRogue_"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sodium_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

